--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,12 +147,12 @@ tr:hover {
 <h4><span id="message"></span></h4>
   </div>
   <div class="login-container">
-    <form class="login-form">
+    <div class="login-form">
       <input type="text" id="username" placeholder="Username">
       <input type="password" id="password" placeholder="Password">
       <button class="morning-button" onclick="captureTimeLog('Morning')">Login</button>
      
-    </form>
+    </div>
     
   </div>
   <div class="container">
