--- a/views/index.ejs
+++ b/views/index.ejs
@@ -150,7 +150,7 @@ tr:hover {
     <div class="login-form">
       <input type="text" id="username" placeholder="Username">
       <input type="password" id="password" placeholder="Password">
-      <button class="morning-button" onclick="captureTimeLog('Morning')">Login</button>
+      <button class="morning-button" onclick="getTimeLogs()">Login</button>
      
     </div>
     
