--- a/views/applyleave.ejs
+++ b/views/applyleave.ejs
@@ -201,6 +201,9 @@
             border-radius: 4px;
             resize: vertical;
         }
+        .status-message{
+            background-color: #45a049;
+        }
     </style>
 </head>
 
